--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.5",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^5.0.1",
     "uuid": "8.3.2"
   },
   "devDependencies": {
